--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,23 @@
 /* Enter your Styles below! */
 
+ body {
+  background-image: url(../images/whalehome-01.png);
+  background-repeat: no-repeat;
+  background-size:cover;
+}
+
 a{ text-decoration: none; }
 
 /*.active {text decoration: underline;}*/
 
+/*nav{
+	display:grid;
+	grid-template-columns: 50%, 50%;
+}*/
+
+nav{ padding: 20px;
+	font-family: 'Barlow', sans-serif;
+  	font-size: 16px;}
 
 nav ul{
 	list-style-type: none;
@@ -11,6 +25,34 @@ nav ul{
 }
 
 nav li{ display: inline-block; 
-	margin-left: 40px;
+		margin-left: 60px;
+  		float: right;  		
 }
 
+a{
+	color:#000;
+}
+
+h1 {
+	width:50px;
+	height:50px;
+	font-family: 'Barlow', sans-serif;
+	color:#e83832;
+	font-size:43px;
+}
+
+
+article{ 
+	padding:40px;
+	width:200px;
+	height:20px;
+	font-family: 'Montserrat', sans-serif;
+	color:#fff;
+	font-size:16px;
+}
+
+
+
+
+
+/*font-family: 'Montserrat', sans-serif;*/
