--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,15 @@ body.home{
   background-color:#fff;}
 
 body.blue{
-	background-color:blue;
+	background-color:#a6d1ca;
 }
 
 body.humpback{
-	background-color:lightblue;
+	background-color:#225caa;
 }  
 
 body.gray{
-	background-color:green;
+	background-color:#e5d8b5;
 }
 
 body.orca{
