--- a/css/style.css
+++ b/css/style.css
@@ -23,22 +23,22 @@ a:hover{
 }
 
 
-a:hover.Bluepage{
+a:hover.bluepage{
  border:2px solid #a6d1ca;  
 }
 
 
-a:hover.Humpbackpage{
+a:hover.humpbackpage{
  border:2px solid #225caa;  
 }
 
 
-a:hover.Graypage{
+a:hover.graypage{
  border:2px solid #e5d8b5;  
 }
 
 
-a:hover.Orcapage{
+a:hover.orcapage{
  border:2px solid #e8858c;  
 }
 
