--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ nav li{ display: inline-block;
 .homepagelink{
   	text-align:center;
   	display:inline-block;
-  	margin-left: 20px;
+  	margin-left: 30px;
+  	padding:10px;
   }
 
 
@@ -105,24 +106,25 @@ h1.blue_header {
 
 
 h1.humpback_header {
-	padding:30px;
-	width:50px;
-	height:50px;
+	width:100%;
+	padding-top:20px;
+	margin-left:20px;
 	font-family: 'Barlow', sans-serif;
-	color:#fff;
-	font-size:70px;
+	color:#96c6e2;
+	font-size:100px;
 	font-weight:900;
 }
 
 
 h1.gray_header {
-	padding:30px;
-	width:50px;
-	height:50px;
+	width:100%;
+	padding-top:20px;
+	margin-left:850px;
 	font-family: 'Barlow', sans-serif;
-	color:#fff;
-	font-size:70px;
+	color:#3e3694;
+	font-size:100px;
 	font-weight:900;
+	
 }
 
 
@@ -153,14 +155,14 @@ section.orca_section{
 
 section.gray_section{
 	  display: grid;
-      grid-template-columns: 40% 60%;
+      grid-template-columns: 75% 15%;
       
 }
 
 
 section.humpback_section{
 	  display: grid;
-      grid-template-columns: 40% 60%;
+      grid-template-columns: 20% 80%;
       
 }
 
@@ -204,32 +206,32 @@ article.blue_article{
 
 article.humpback_article{ 
 	display:block;
-	padding:40px;
-	margin-top: 170px;
+	padding:30px;
+	margin-top: 60px;
 	margin-right: 90px;
-	width:200px;
-	height:200px;
+	width:300px;
+	height:250px;
 	font-family: 'Montserrat', sans-serif;
 	color:#000;
-	font-size:16px;
-	line-height:1.5em;
-	font-weight:200;
+	font-size:14px;
 	background-color:#96c6e2;
+	line-height:1.5em;
 }
+
+
 
 article.gray_article{ 
 	display:block;
-	padding:40px;
-	margin-top: 170px;
-	margin-right: 90px;
-	width:200px;
-	height:200px;
+	padding:50px;
+	margin-top: 20px;
+	margin-right: -200px;
+	width:250px;
+	height:250px;
 	font-family: 'Montserrat', sans-serif;
-	color:#96c6e2;
-	font-size:16px;
+	color:#fff;
+	font-size:14px;
+	background-color:#96c6e2;
 	line-height:1.5em;
-	font-weight:200;
-	background-color:#3e3694;
 }
 
 
@@ -263,7 +265,26 @@ img.orca_img_1{
 
 }
 
+img.gray_img_1{
+  display: block;
+  margin-top:-250px;
+  margin-left:auto;
+  margin-right:200px;
+  width: 80%;
+  z-index: -100;
 
+}
+
+
+img.humpback_img_1{
+  display: block;
+  margin-top:-250px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  z-index: -100;
+
+}
 
 footer{
   position: fixed;
