updated grey whale page

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ article.gray_article{
 	font-family: 'Montserrat', sans-serif;
 	color:#fff;
 	font-size:14px;
-	background-color:#96c6e2;
+	background-color:#3e3694;
 	line-height:1.5em;
 }
 
