nav link changes

--- a/css/style.css
+++ b/css/style.css
@@ -62,19 +62,19 @@ color:#e83832;
 }
 
 ul.orca_ul a {
-color:#2ba4d6;
+color:#225caa;
 }
 
 ul.gray_ul a {
-color:#e99b75;
+color:#3e3694;
 }
 
 ul.humpback_ul a {
-color:#e88994;
+color:#96c6e2;
 }
 
 ul.blue_ul a {
-color:#fff;
+color:#0089cf;
 }
 
 
