--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ img.orca_img_1{
   margin-top:-250px;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width:auto;
   z-index: -100;
 
 }
