--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ h1.home_header {
 	width:300px;
 	height:100px;
 	padding-top:20px;
+	padding-left:20px;
 	font-family: 'Barlow', sans-serif;
 	color:#e83832;
 	font-size:70px;
@@ -127,6 +128,15 @@ h1.home_header {
 
 
 h1.blue_header {
+	
+  position: absolute;
+  right: 900px;
+  top: 20px;
+  font-size:80px;
+  font-weight:900;
+  font-family: 'Barlow', sans-serif;
+
+/*
 	width:300px;
 	font-family: 'Barlow', sans-serif;
 	color:#0089cf;
@@ -134,6 +144,7 @@ h1.blue_header {
 	font-weight:900;
 	text-align: right;
 	padding:20px;	
+*/
 }
 
 h1.humpback_header {
@@ -278,34 +289,32 @@ article.orca_article{
 }
 
 
-/*
 
 
 img.homepage_img_1{
 	margin-top:-180px;
+	margin-left:300px;
 	z-index:-100;
-}*/
+}
 
 img.orca_img_1{
-  width:800px; 
   margin-top:-250px;
   margin-left:500px;
   z-index:0;
 }
 
 
-
 img.gray_img_1{
   margin-top:-250px;
   margin-right:500px;
   z-index:0;
-  width:80%;
+  width:75%;
 }
 
 img.humpback_img_1{
   margin-top:-250px;
   margin-right:200px;
-  width: 80%;
+  width: 75%;
   z-index:0;
 }
 
@@ -313,22 +322,22 @@ img.humpback_img_1{
 img.blue_img_1{
   margin-top:-250px;
   margin-right:200px;
-  width: 80%;
+  width: 75%;
   z-index:0;
 }
 
-/*
-footer{
-  position: fixed;
+
+footer {
   left: 0;
   bottom: 0;
   width: 100%;
+  color: #000;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   font-size:12px;
 }
 
-*/
+
 
 
 
